Dibuat menggunakan Colaboratory

--- a/coba2.ipynb
+++ b/coba2.ipynb
@@ -6,7 +6,7 @@
       "name": "coba2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0+iOWjhmrUHdJeKum1vSq",
+      "authorship_tag": "ABX9TyNO0GIAd9bOLGlKupRFRBNE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -277,7 +277,7 @@
         "\n",
         "# x = (inverse(Atranspose * A) * Atranspose)*y [dimana A = matrix data]\n",
         "calcMatrix = np.matmul(matrixDataTranspose, matrixData)\n",
-        "calcMatrixInverse2 = np.linalg.inv(calcMatrix)\n",
+        "calcMatrixInverse = np.linalg.inv(calcMatrix)\n",
         "m = np.matmul(calcMatrixInverse2, matrixDataTranspose)\n",
         "coefReg = np.matmul(m2, data['y'])\n",
         "\n",
