Dibuat menggunakan Colaboratory

--- a/coba2.ipynb
+++ b/coba2.ipynb
@@ -6,7 +6,7 @@
       "name": "coba2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPUscpVl9jzHR/UgYyNv/PC",
+      "authorship_tag": "ABX9TyM5rIwj5cLYEcaP4pJkCm6l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -278,8 +278,8 @@
         "# x = (inverse(Atranspose * A) * Atranspose)*y [dimana A = matrix data]\n",
         "calcMatrix = np.matmul(matrixDataTranspose, matrixData)\n",
         "calcMatrixInverse = np.linalg.inv(calcMatrix)\n",
-        "m = np.matmul(calcMatrixInverse2, matrixDataTranspose)\n",
-        "coefReg = np.matmul(m2, data['y'])\n",
+        "m = np.matmul(calcMatrixInverse, matrixDataTranspose)\n",
+        "coefReg = np.matmul(m, data['y'])\n",
         "\n",
         "plt.plot(data['x'], data['y'], 'o', label=\"Data\")\n",
         "plt.plot(data['x'], data['y'], 'r', label=\"Fitted Line\")\n",
@@ -292,9 +292,9 @@
           "height": 265
         },
         "id": "9ONOdXlb1GON",
-        "outputId": "ae805d08-4ffd-4b96-d6f9-b8b7d0950db0"
+        "outputId": "4f94fa9d-a320-4dc4-b17c-e7c1fb9cf0c2"
       },
-      "execution_count": 72,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,9 +336,9 @@
           "height": 265
         },
         "id": "UWjqvKaK2FKL",
-        "outputId": "ec2044b3-9fb6-4cf4-b73e-a316a7135676"
+        "outputId": "911818fa-a689-4b16-d214-5b8302e6c739"
       },
-      "execution_count": 73,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "display_data",
